# powerstat

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  analytics_data.py  app_details.py  daemon.py  main.py  pyproject.toml  usage_view.py  version.py  window.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
packaging/: 50-powerstats.preset  powerstats-launcher  powerstats-user.service  powerstats.desktop  powerstats.service
packaging/debian/: control  postinst  postrm  prerm
scripts/: build.sh  generate-icons.sh  install.sh  package.sh  release.sh
tests/: conftest.py  test_analytics.py
